# DevMan

./: CLAUDE.md  Cargo.toml  README.md
.devman/meta/tasks/: 01KGH90C7ANH090HN8SS4JXR09.meta.json
.devman/tasks/: 01KGH90C7ANH090HN8SS4JXR09.json
crates/ai/: Cargo.toml
crates/ai/src/: guidance.rs  interactive.rs  interface.rs  job_manager.rs  lib.rs  main.rs  mcp_server.rs  validation.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: event.rs  goal.rs  id.rs  knowledge.rs  lib.rs  phase.rs  project.rs  quality.rs  task.rs  work_record.rs
crates/evolution/: Cargo.toml
crates/evolution/src/: lib.rs  metrics.rs  optimizer.rs
crates/execution/: Cargo.toml
crates/execution/src/: dependency.rs  engine.rs  lib.rs  scheduler.rs  selector.rs
crates/knowledge/: Cargo.toml
crates/knowledge/examples/: reranker_e2e.rs  vector_search_e2e.rs
crates/knowledge/src/: classification.rs  lib.rs  reranker.rs  service.rs  template.rs  vector.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/progress/: Cargo.toml
crates/progress/src/: blocker.rs  estimator.rs  lib.rs  tracker.rs
crates/quality/: Cargo.toml
crates/quality/src/: checks.rs  custom.rs  engine.rs  gate.rs  human.rs  lib.rs  parser.rs  registry.rs
crates/reflection/: Cargo.toml
crates/reflection/src/: analyzer.rs  engine.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: git_json.rs  json_storage.rs  lib.rs  sqlite_storage.rs  trait_.rs
crates/tools/: Cargo.toml
crates/tools/src/: builtin.rs  lib.rs  trait.rs  workflow.rs
crates/work/: Cargo.toml
crates/work/src/: context.rs  executor.rs  lib.rs  manager.rs
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  KNOWLEDGE.md  MCP_API.md  MCP_SETUP.md  QUALITY_GUIDE.md  TODO.md
docs/archive/: v3-2026-02-02.md
docs/plans/: 2026-02-02-mcp-server-design.md  2026-02-04-vector-search.md
