[workspace]
members = [
    "crates/core",
    "crates/storage",
    "crates/execution",
    "crates/reflection",
    "crates/evolution",
    "crates/cli",
    "crates/mcp",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jerry"]
repository = "https://github.com/jerryg/DevMan"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
async-trait = "0.1"
anyhow = "1"

# Internal crates
devman-core = { path = "crates/core" }
devman-storage = { path = "crates/storage" }
devman-execution = { path = "crates/execution" }
devman-reflection = { path = "crates/reflection" }
devman-evolution = { path = "crates/evolution" }
