[package]
name = "devman-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "devman-ai"
path = "src/main.rs"

[dependencies]
devman-core = { workspace = true }
devman-storage = { workspace = true }
devman-knowledge = { workspace = true }
devman-progress = { workspace = true }
devman-work = { workspace = true }
devman-quality = { workspace = true }
devman-tools = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true, features = ["serde"] }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
futures = "0.3"
