[package]
name = "devman-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "devman"
path = "src/main.rs"

[dependencies]
devman-core = { workspace = true }
devman-storage = { workspace = true }
devman-execution = { workspace = true }
devman-reflection = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = "1"
