[package]
name = "devman-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
