[package]
name = "devman-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
devman-core = { workspace = true }
devman-storage = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
