[package]
name = "devman-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["json"]
json = []
sqlite = ["sqlx", "sqlx-core", "array-init", "ulid"]

[dependencies]
devman-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

sqlx = { version = "0.8", default-features = false, features = ["sqlite", "chrono", "runtime-tokio"], optional = true }
sqlx-core = { version = "0.8", optional = true }
array-init = { version = "2", optional = true }
ulid = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
