[package]
name = "devman-work"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
devman-core = { workspace = true }
devman-storage = { workspace = true }
devman-quality = { workspace = true }
devman-progress = { workspace = true }
devman-tools = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
